plans/rewrite-migration/08-Documentation.md